home page responsive

--- a/src/Page/Home/Work/Work.css
+++ b/src/Page/Home/Work/Work.css
@@ -1,9 +1,9 @@
-
-
 @media only screen and (max-width: 576px) {
-    .footer{
+    .work{
         width: 90%;
+        padding: 0px;
+        margin: 0px;
+        font-size: 15px;
         
     }
-    
   }
