--- a/src/Page/Home/Banner/Banner.css
+++ b/src/Page/Home/Banner/Banner.css
@@ -2,3 +2,17 @@
     background-color: #e2f9ee;
 }
 
+
+
+@media only screen and (max-width: 576px) {
+    .banner-info{
+        width: 90%;
+        display: flex;
+        flex-direction: column;
+        padding: 10px;
+    }
+    .banner img{
+        width: 100%;
+    }
+    
+  }
