--- a/src/Page/Home/HomeCard/HomeCard.css
+++ b/src/Page/Home/HomeCard/HomeCard.css
@@ -6,3 +6,20 @@
     background-color: #eeee;
     padding: 20px;
 }
+
+
+@media only screen and (max-width: 576px) {
+    .card {
+        width: 100%;
+        padding: 0px;
+        gap: 0px;
+        
+    }
+
+    .home-card{
+        width: 90%;
+        padding: 0px;
+        margin: 0px;
+    }
+    
+  }
