--- a/src/Shared/Header/Header.css
+++ b/src/Shared/Header/Header.css
@@ -2,3 +2,28 @@
     
     margin-left: 50px;
 }
+
+
+@media only screen and (max-width: 576px) {
+    .banner{
+        width: 90%;
+        padding: 0px;
+        margin: 0px;
+    }
+    .menubar{
+        width: 100%;
+        display: block;
+        position: absolute;
+        margin-top: 150px;
+        
+    }
+    .navbar{
+        width: 100%;
+    }
+    .banner button{
+        width: 40%;
+    }
+    .title{
+        font-size: 18px;
+    }
+  }
